# hikari

./: .clippy.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  PLAN.md  PLAN_ANIMATION.md  README.md  cargo.toml  celestia-devtools.just  deny.toml  dockerfile  justfile  plan.md  readme.md  rustfmt.toml  test_animation.html
.cargo/: config.toml  watch.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
docker/: README.md  base-selenium.Dockerfile  e2e.Dockerfile  (+4 more)
examples/demo-app/: Cargo.toml  README.md  build.rs  index.html  justfile
examples/demo-app/src/: app.rs  components.rs  lib.rs  main.rs  pages.rs  paths.rs
examples/demo-app/src/components/: layout.rs  mod.rs  section.rs  sidebar.rs  sidebar_tree.rs  top_nav.rs
examples/demo-app/src/pages/: basic_components.rs  data_components.rs  feedback_components.rs  home.rs  mod.rs  navigation_components.rs  node_graph_demo.rs  table_demo.rs  tree_demo.rs
examples/demo-app/src/pages/components/: alert.rs  badge.rs  basic.rs  breadcrumb.rs  button.rs  card.rs  data.rs  feedback.rs  input.rs  layout.rs  menu.rs  mod.rs  navigation.rs  overview.rs  tabs.rs  toast.rs  tooltip.rs
examples/demo-app/src/pages/demos/: mod.rs  showcase.rs
examples/demo-app/src/pages/system/: animations.rs  css.rs  icons.rs  mod.rs  overview.rs  palette.rs
examples/demo-app/src/styles/: home.scss  index.scss  layout.scss  pages.scss  showcase.scss  sidebar.scss  sidebar_clean.scss
examples/node-graph-demo/: Cargo.toml  README.md  index.html  justfile
examples/node-graph-demo/src/: app.rs  lib.rs  main.rs
examples/ssr-demo/: Cargo.toml  README.md  justfile
examples/ssr-demo/src/: index.html  main.rs
examples/table-demo/: Cargo.toml  README.md  index.html  justfile
examples/table-demo/src/: app.rs  lib.rs  main.rs
examples/web/: Cargo.toml
examples/web/src/: app.rs  utils.rs  web_entry.rs
examples/web/src/pages/: mod.rs  personal.rs  portal.rs  thread.rs
examples/web/src/utils/: mod.rs
examples/web/src/utils/contexts/: app_props.rs
examples/website/: ANIMATION_API.md  Cargo.toml  README.md  build.rs  index.html
examples/website/docs/: IMPLEMENTATION.md
examples/website/locales/ar/: strings.toml
examples/website/locales/en/: home.md  strings.toml
examples/website/locales/es/: strings.toml
examples/website/locales/fr/: strings.toml
examples/website/locales/ja/: strings.toml
examples/website/locales/ko/: strings.toml
examples/website/locales/ru/: strings.toml
examples/website/locales/zhs/: home.md  strings.toml
examples/website/locales/zht/: home.md  strings.toml
examples/website/src/: animation.rs  app.rs  debug_icons.rs  dynamic_docs.rs  hooks.rs  i18n_init.rs  lang.js  lib.rs  main.rs  markdown.rs  paths.rs  platform_init.rs  reactive.rs  router.rs  routing.rs  scrollbar_host.rs  test_icon_debug.rs  theme.js  theme.rs  ui.rs
examples/website/src/components/: aside_footer.rs  breadcrumb.rs  code_block.rs  demo_page.rs  doc_components.rs  doc_page.rs  dynamic_markdown.rs  glow.rs  i18n_demo.rs  icon_utils.rs  layout.rs  markdown_renderer.rs  mod.rs  page_layout.rs  portal.rs  portal_examples.rs  registry.rs  sidebar.rs  sidebar_tree.rs  top_nav.rs
examples/website/src/docs/components/layer1/: basic.md
examples/website/src/js/: mod.rs  router.rs
examples/website/src/pages/: animation_demo.rs  animations.rs  doc_page.rs  home.rs  interactive.rs  mod.rs  not_found.rs
examples/website/src/pages/components/: alert.rs  badge.rs  basic.rs  breadcrumb.rs  button.rs  card.rs  data.rs  data_pagination.rs  data_table.rs  data_tree.rs  display.rs  display_avatar.rs  display_comment.rs  display_description_list.rs  display_empty.rs  display_image.rs  display_qrcode.rs  display_tag.rs  entry.rs  entry_cascader.rs  entry_transfer.rs  feedback.rs  input.rs  layout.rs  menu.rs  mod.rs  navigation.rs  overview.rs  tabs.rs  toast.rs  tooltip.rs
examples/website/src/pages/components/data/: pagination.rs  table.rs  tree.rs
examples/website/src/pages/components/display/: avatar.rs  comment.rs  description_list.rs  empty.rs  image.rs  mod.rs  qrcode.rs  tag.rs
examples/website/src/pages/components/entry/: cascader_doc.rs  mod.rs  number_input_doc.rs  search_doc.rs  transfer_doc.rs
examples/website/src/pages/components/extra/: collapsible_doc.rs  mod.rs  timeline_doc.rs  user_guide_doc.rs  zoom_controls_doc.rs
examples/website/src/pages/components/layer1/: avatar.rs  basic.rs  basic_components.rs  button.rs  comment.rs  description_list.rs  display.rs  empty.rs  feedback.rs  form.rs  image.rs  mod.rs  number_input.rs  search.rs  select_detail_modal.rs  switch.rs  tag.rs
examples/website/src/pages/components/layer1/demos/: button.rs  mod.rs
examples/website/src/pages/components/layer2/: cascader.rs  collapsible.rs  data.rs  feedback.rs  form.rs  mod.rs  navigation.rs  overview.rs  pagination.rs  qrcode.rs  table.rs  timeline.rs  transfer.rs  tree.rs
examples/website/src/pages/components/layer3/: editor.rs  media.rs  mod.rs  overview.rs  user_guide.rs  visualization.rs  zoom_controls.rs
examples/website/src/pages/demos/: dashboard_demo.rs  form_demo.rs  mod.rs  showcase.rs  video_demo.rs
examples/website/src/pages/demos/layer1/: form_demo.rs  mod.rs
examples/website/src/pages/demos/layer2/: dashboard_demo.rs  mod.rs
examples/website/src/pages/demos/layer3/: mod.rs  video_demo.rs
examples/website/src/pages/system/: animations.rs  css.rs  icons.rs  mod.rs  overview.rs  palette.rs  registry.rs
examples/website/src/styles/: animations.scss  aside_footer.scss  code_block.scss  home.scss  index.scss  layout.scss  markdown_renderer.scss  pages.scss  showcase.scss  sidebar.scss  spa.scss
website/: Cargo.toml
website/examples/dev/: main.rs  render.rs  static.rs
website/examples/dev/pages/: component.rs  guide.rs  mod.rs  portal.rs
website/src/: app.rs  lib.rs  preload_data.rs  web_entry.rs
website/src/pages/: component.rs  guide.rs  mod.rs  not_found.rs  portal.rs
(+684 files in other folders)
