[workspace]
members = [
    "packages/palette",
    "packages/theme",
    "packages/animation",
    "packages/components",
    "packages/extra-components",
    "packages/icons",
]

resolver = "2"

exclude = [
    "examples/*",
    "packages/e2e",
]

[workspace.package]
version = "0.2.7"
edition = "2024"
authors = ["langyo <langyo.china@gmail.com>"]
license = "SySL-1.0"
repository = "https://github.com/celestia-island/hikari"

[workspace.dependencies]
# =================================================================
# Basic language and tools
# =================================================================
anyhow = "^1"
thiserror = "^2"

# =================================================================
# Data and serialization
# =================================================================
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }

# =================================================================
# Profile settings
# =================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
