[workspace]
members = [
    "packages/palette",
    "packages/theme",
    "packages/animation",
    "packages/components",
    "packages/extra-components",
    "packages/icons",
    "packages/builder",
    "packages/e2e",
    "packages/i18n",
]

resolver = "2"

exclude = [
    "examples/*",
    "examples/demo",
]

[workspace.package]
version = "0.2.7"
edition = "2024"
authors = ["Hikari Contributors"]
license-file = "LICENSE"

# ============================================================================
# Hikari build-time configuration
# ============================================================================
#
# Collections listed here are compiled into the crates that opt into them (e.g.
# hikari-palette exposes `collections::chinese` when "chinese" is listed). The
# selection is read by each crate's build.rs, which emits a matching
# `cargo:rustc-cfg=hikari_collection_<name>` flag. No Cargo features involved.
#
# Add or remove entries to control which color catalogs ship in your build.
[workspace.metadata.hikari]
collections = ["chinese"]

[workspace.dependencies]
# =================================================================
# Basic language and tools
# =================================================================
anyhow = "^1"
thiserror = "^2"
futures = "^0.3"
yuuka = "^0.6"

# =================================================================
# Data and serialization
# =================================================================
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
uuid = { version = "^1", features = ["v7", "fast-rng", "macro-diagnostics", "serde"] }

# =================================================================
# Async runtime
# =================================================================
tokio = { version = "^1", features = ["full"] }

# =================================================================
# Logging and tracing
# =================================================================
log = "^0.4"
tracing = "^0.1"

# =================================================================
# Server-side dependencies (for SSR)
# =================================================================
axum = { version = "^0.8", features = ["macros", "ws"] }
axum-extra = { version = "^0.12", features = ["typed-header"] }
tower = { version = "^0.5", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors", "fs", "trace"] }
gloo = "^0.11"
gloo-net = "^0.6"

# =================================================================
# Data serialization and processing
# =================================================================
ron = "^0.8"
once_cell = "^1"
quick-xml = "^0.30"
reqwest = { version = "^0.12", features = ["json"] }

# =================================================================
# Profile settings
# =================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
