[package]
authors = ["langyo <langyo.china@gmail.com>"]
name = "hikari-website"

version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "build"

[[example]]
name = "dev"

[dependencies]
# 工作区依赖
hikari-boot = { path = "../packages/boot" }
hikari-components = { path = "../packages/components" }
hikari-theme = { path = "../packages/theme" }
hikari-types = { path = "../packages/types" }

# 基础语言与工具
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

# 数据与序列化
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
yuuka = { workspace = true }

# 日志与追踪
console_log = { workspace = true }
log = { workspace = true }

# MCP / 网络与协议
gloo = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }

[dev-dependencies]
# 工作区依赖
hikari-boot = { path = "../packages/boot" }
hikari-components = { path = "../packages/components" }
hikari-website = { path = "." }

# 日志与追踪
env_logger = { workspace = true }

# Async / 并发运行时
tokio = { workspace = true }

# MCP / 网络与协议
axum = "^0.7"
tower = { version = "^0.4", features = ["full"] }
