[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
# This is a standalone example, not part of the main workspace

[[bin]]
name = "demo_app_server"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "demo_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
server = ["dep:tokio", "dep:axum", "dep:tower-http", "dep:tower", "dep:anyhow", "dep:tracing", "dep:tracing-subscriber", "dep:http", "dep:render-service"]

# Optional integrations
embedded = ["icons/embedded"]

[dependencies]
# Workspace dependencies (with short aliases)
components = { path = "../../packages/components", package = "hikari-components", features = ["basic", "feedback", "navigation", "data"] }
icons = { path = "../../packages/icons", package = "hikari-icons" }
palette = { path = "../../packages/palette", package = "hikari-palette" }
render-service = { path = "../../packages/render-service", package = "hikari-render-service", optional = true }

# Dioxus frontend framework
dioxus = { version = "^0.7", features = ["web", "router"] }
dioxus-router = "^0.7"
dioxus-web = "^0.7"

# WASM related
wasm-bindgen = "^0.2"
console_error_panic_hook = "^0.1"

# Server-side dependencies (only used when server feature is enabled)
tokio = { version = "^1", features = ["full"], optional = true }
axum = { version = "^0.8", features = ["macros"], optional = true }
tower-http = { version = "^0.6", features = ["fs", "trace", "cors"], optional = true }
tower = { version = "^0.5", features = ["full"], optional = true }
anyhow = { version = "^1", optional = true }
tracing = { version = "^0.1", optional = true }
tracing-subscriber = { version = "^0.3", optional = true }
http = { version = "^1", optional = true }
