[package]
name = "node-graph-demo"
version = "0.1.0"
edition = "2024"
authors = ["langyo <langyo.china@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-web = { version = "0.7" }
hikari-theme = { path = "../../packages/theme" }
hikari-palette = { path = "../../packages/palette" }
hikari-extra-components = { path = "../../packages/extra-components" }
serde_json = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
tokio = { version = "1", features = ["full"] }
