[package]
name = "ssr-demo"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
# This is a standalone example, not part of the main workspace

[[bin]]
name = "ssr-demo"
path = "src/main.rs"

[dependencies]
# 工作区依赖
hikari-components = { path = "../../packages/components" }
hikari-palette = { path = "../../packages/palette" }
hikari-theme = { path = "../../packages/theme" }
hikari-render-service = { path = "../../packages/render-service" }

# 基础语言与工具
anyhow = "^1"

# 数据与序列化
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# 日志与追踪
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

# Async / 并发运行时
tokio = { version = "^1", features = ["full"] }

# MCP / 网络与协议
axum = { version = "^0.8", features = ["macros", "ws"] }
dioxus = { version = "^0.7", features = ["web", "router"] }
dioxus-fullstack = "^0.7"
tower = { version = "^0.5", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors", "fs", "trace"] }
