[package]
name = "ssr-demo"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
# This is a standalone example, not part of the main workspace

[[bin]]
name = "ssr-demo"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
hikari-components = { path = "../../packages/components" }
hikari-palette = { path = "../../packages/palette" }
hikari-theme = { path = "../../packages/theme" }
hikari-render-service = { path = "../../packages/render-service" }

# Basic language and tools
anyhow = "^1"

# Data and serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Logging and tracing
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

# Async / concurrency runtime
tokio = { version = "^1", features = ["full"] }

# MCP / network and protocols
axum = { version = "^0.8", features = ["macros", "ws"] }
dioxus = { version = "^0.7", features = ["web", "router"] }
dioxus-fullstack = "^0.7"
tower = { version = "^0.5", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors", "fs", "trace"] }
