[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
# This is a standalone example, not part of the main workspace

[lib]
name = "website"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tairitsu framework packages
tairitsu-vdom = { path = "../../../tairitsu/packages/vdom" }
tairitsu-hooks = { path = "../../../tairitsu/packages/hooks" }
tairitsu-macros = { path = "../../../tairitsu/packages/macros" }
tairitsu-web = { path = "../../../tairitsu/packages/web", features = ["wit-bindings"] }

# Hikari design system (pure Rust, no Dioxus)
hikari-palette = { path = "../../packages/palette" }

# Markdown rendering
pulldown-cmark = "0.12"

# Logging and error handling
tracing = "^0.1"
anyhow = "^1"

[package.metadata.tairitsu]
app-name = "Hikari Design System"
title = "Hikari Design System"
description = "Hikari UI component library documentation"

[package.metadata.tairitsu.build]
target = "component"
output-dir = "../../target/hikari-packager-dist"
optimize = true
sourcemap = true

[package.metadata.tairitsu.dev]
port = 3000
hot-reload = true
open-browser = false

[package.metadata.tairitsu.html]
lang = "en"
charset = "UTF-8"
viewport = "width=device-width, initial-scale=1.0"
title = "Hikari"
head = """
<link rel="stylesheet" href="/styles/bundle.css">
<link rel="stylesheet" href="/styles/hikari-spa.css">
<script>
(() => {
  const ROUTES = {
    '': 'home',
    '/': 'home',
    '/components': 'components-overview',
    '/components/layer1': 'components-layer1',
    '/components/layer2': 'components-layer2',
    '/components/layer3': 'components-layer3',
    '/system': 'system-overview',
    '/system/palette': 'system-palette',
    '/system/css': 'system-css',
    '/system/icons': 'system-icons',
    '/system/animations': 'system-animations',
    '/system/i18n': 'system-i18n',
    '/demos': 'demos-overview',
    '/demos/form': 'demos-form',
    '/demos/dashboard': 'demos-dashboard',
  };

  function getRouteId() {
    var hash = (location.hash || '').replace(/^#/, '');
    if (hash.length > 1 && hash[hash.length - 1] === '/') hash = hash.slice(0, -1);
    if (!hash) hash = '/';
    return ROUTES[hash] || 'not-found';
  }

  function navigate() {
    var routeId = getRouteId();
    document.querySelectorAll('.hikari-page').forEach(function(p) {
      p.classList.remove('is-active');
      p.setAttribute('aria-hidden', 'true');
    });
    var page = document.getElementById('page-' + routeId);
    if (page) {
      page.classList.add('is-active');
      page.removeAttribute('aria-hidden');
      window.scrollTo(0, 0);
    }
    document.querySelectorAll('.sidebar-link').forEach(function(link) {
      link.classList.remove('is-active');
    });
    var currentHash = location.hash || '#/';
    var activeLink = document.querySelector('.sidebar-link[href="' + currentHash + '"]');
    if (activeLink) { activeLink.classList.add('is-active'); }
  }

  window.addEventListener('hashchange', navigate);
  document.addEventListener('DOMContentLoaded', navigate);
})();
</script>"""

[package.metadata.tairitsu.assets]
include = ["public/**"]
