[package]
name = "website"
version = "0.1.0"
edition = "2024"
authors = ["langyo <langyo.china@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace]
# This is a standalone example, not part of the main workspace

[lib]
name = "website"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tairitsu framework packages
tairitsu-vdom = { path = "../../../tairitsu/packages/vdom" }
tairitsu-hooks = { path = "../../../tairitsu/packages/hooks" }
tairitsu-macros = { path = "../../../tairitsu/packages/macros" }
tairitsu-web = { path = "../../../tairitsu/packages/web", default-features = false, features = [
  "vdom",
  "hooks",
  "macros",
  "style",
  "wit-bindings",
] }

# Hikari design system (pure Rust, no Dioxus)
hikari-palette = { path = "../../packages/palette" }
hikari-components = { path = "../../packages/components", default-features = false }

# Markdown rendering
pulldown-cmark = "0.12"

# Logging and error handling
tracing = "^0.1"
anyhow = "^1"

[package.metadata.tairitsu]
app-name = "Hikari Design System"
title = "Hikari Design System"
description = "Hikari UI component library documentation"

[package.metadata.tairitsu.build]
target = "component"
output-dir = "../../public"
optimize = true
sourcemap = true

[package.metadata.tairitsu.dev]
port = 3000
hot-reload = true
open-browser = false

[package.metadata.tairitsu.html]
lang = "en"
charset = "UTF-8"
viewport = "width=device-width, initial-scale=1.0"
title = "Hikari"
head = """
<link rel="stylesheet" href="/styles/bundle.css">
<link rel="stylesheet" href="/styles/spa.css">
<link rel="stylesheet" href="/styles/animations.css">
<script>
(() => {
  const ROUTES = {
    '': 'home',
    '/': 'home',
    '/components': 'components-overview',
    '/components/layer1': 'components-layer1',
    '/components/layer2': 'components-layer2',
    '/components/layer3': 'components-layer3',
    '/system': 'system-overview',
    '/system/palette': 'system-palette',
    '/system/css': 'system-css',
    '/system/icons': 'system-icons',
    '/system/animations': 'system-animations',
    '/system/i18n': 'system-i18n',
    '/demos': 'demos-overview',
    '/demos/form': 'demos-form',
    '/demos/dashboard': 'demos-dashboard',
    '/animations': 'animations',
  };

  function getRouteId() {
    var path = location.pathname || '/';
    if (path.length > 1 && path[path.length - 1] === '/') path = path.slice(0, -1);
    if (!path) path = '/';
    return ROUTES[path] || 'not-found';
  }

  function navigate() {
    var routeId = getRouteId();
    document.querySelectorAll('.hikari-page').forEach(function(p) {
      p.classList.remove('is-active');
      p.setAttribute('aria-hidden', 'true');
    });
    var page = document.getElementById('page-' + routeId);
    if (page) {
      page.classList.add('is-active');
      page.removeAttribute('aria-hidden');
      window.scrollTo(0, 0);
    }
    // Highlight active sidebar link
    document.querySelectorAll('.sidebar-link').forEach(function(link) {
      link.classList.remove('is-active');
    });
    var currentPath = location.pathname || '/';
    var activeLink = document.querySelector('.sidebar-link[href="' + currentPath + '"]');
    if (activeLink) { activeLink.classList.add('is-active'); }
    // Highlight active topnav link
    document.querySelectorAll('.hikari-topnav__link').forEach(function(link) {
      link.classList.remove('is-active');
      if (currentPath.startsWith(link.getAttribute('href'))) {
        link.classList.add('is-active');
      }
    });
  }

  // Intercept clicks on internal links for SPA navigation (History API)
  document.addEventListener('click', function(e) {
    var link = e.target.closest('a[href]');
    if (!link) return;
    var href = link.getAttribute('href');
    // Only intercept local paths (starts with /)
    if (!href || !href.startsWith('/')) return;
    // Ignore modified clicks (ctrl, shift, meta, alt)
    if (e.metaKey || e.ctrlKey || e.shiftKey || e.altKey) return;
    // Ignore target="_blank" links
    if (link.target === '_blank') return;
    e.preventDefault();
    if (location.pathname !== href) {
      history.pushState(null, '', href);
    }
    // Close mobile drawer on navigation
    var aside = document.getElementById('hikari-aside');
    var overlay = document.getElementById('drawer-overlay');
    if (aside) aside.classList.remove('hi-aside-drawer-open');
    if (overlay) overlay.classList.remove('hi-layout-overlay-open');
    navigate();
  });

  window.addEventListener('popstate', navigate);
  document.addEventListener('DOMContentLoaded', navigate);

  // Drawer toggle behaviour
  document.addEventListener('DOMContentLoaded', function() {
    var toggle = document.getElementById('drawer-toggle');
    var aside = document.getElementById('hikari-aside');
    var overlay = document.getElementById('drawer-overlay');

    function openDrawer() {
      if (aside) aside.classList.add('hi-aside-drawer-open');
      if (overlay) overlay.classList.add('hi-layout-overlay-open');
    }
    function closeDrawer() {
      if (aside) aside.classList.remove('hi-aside-drawer-open');
      if (overlay) overlay.classList.remove('hi-layout-overlay-open');
    }

    if (toggle) {
      toggle.addEventListener('click', function() {
        if (aside && aside.classList.contains('hi-aside-drawer-open')) {
          closeDrawer();
        } else {
          openDrawer();
        }
      });
    }
    if (overlay) {
      overlay.addEventListener('click', closeDrawer);
    }
    // Close drawer on navigation
    window.addEventListener('popstate', closeDrawer);
  });
})();
</script>"""

[package.metadata.tairitsu.assets]
include = ["public/**"]

# SCSS compilation configuration
[package.metadata.tairitsu.scss]
load_paths = [
  "../../packages/theme/styles",
  "../../packages/components/src/styles",
]

[[package.metadata.tairitsu.scss.entries]]
entry = "../../packages/components/src/styles/index.scss"
output = "styles/bundle.css"

[[package.metadata.tairitsu.scss.entries]]
entry = "src/styles/spa.scss"
output = "styles/spa.css"

[[package.metadata.tairitsu.scss.entries]]
entry = "src/styles/animations.scss"
output = "styles/animations.css"
